from QtUI.rawUI.ui_rawEditorFrame import Ui_editorFrame

from PyQt6.QtCore import pyqtSignal
from QtUI.presenters.inputValidationPresentor import InputValidation
from QtUI.widgets.pages.BasicWidget import BasicWidget

class EditorFrame(BasicWidget):    
    
    saveData_button_clicked = pyqtSignal(dict)
    actionUnitSelected = pyqtSignal(int)
    
    def __init__(self, parent = None):
        super().__init__(parent)
    
        self.editorFrame = Ui_editorFrame()
        self.editorFrame.setupUi(self)
                
        #  --- 关联回调函数 ---
        self.editorFrame.leftSwitchButton.clicked.connect(lambda: self.actionUnitSelected.emit(-1))
        self.editorFrame.rightSwitchButton.clicked.connect(lambda: self.actionUnitSelected.emit(1))
        self.editorFrame.saveButton.clicked.connect(self._on_confirmButton_clicked)
        self.editorFrame.createNewButton.clicked.connect(lambda: self.actionUnitSelected.emit(0))
        
        #  --- 创建检验对象 ---
        self.validation = InputValidation()
        
        #  --- 赋值 ---
        self.EF = self.editorFrame
        self.IEF = self.editorFrame.inputEnterFrameBase

    
    #SPECIFIC; DETECT confirmButton; VALIDATE, COLLECT data and EMIT a signal to presentor
    def _on_confirmButton_clicked(self):
        actionUnits = self.collectData()
        actionUnits["timeSpan"] = getTimeSpan_API(actionUnits["start"],actionUnits["end"])
        
        # 把包含 data 键的完整数据包发射出去
        self.saveData_button_clicked.emit(actionUnits)
        
    #SPECIFIC; Collect data from stackedwidget, OUTPUT them as list of actionUnit
    def collectData(self):
        return self.IEF.getData()
        
    #SPECIFIC; INPUT date and data; UPDATE data into editorFrame
    def fillData(self,actionUnit):
        self.IEF.fillData(actionUnit)

    def setTutorialLabels(self):
        #新建页面并且初始化标语
        self.fillData(None)
    

        
            
            
        